src/objects/Car_Model__c.object
<CustomObject>
    <description>Knowledge: This object is to store Car Model info to be used in DM and Car Model comparison.</description>
    <fields>
        <fullName>AMG_Classification__c</fullName>
        <label>AMG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>Non-AMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Date_Market__c</fullName>
        <label>Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_Date_Retail__c</fullName>
        <label>Deployment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baumaster__c</fullName>
        <label>Baumaster</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Type__c</fullName>
        <label>Body Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4 DOOR COUPE</fullName>
                </value>
                <value>
                    <fullName>CABRIO</fullName>
                </value>
                <value>
                    <fullName>COUPE</fullName>
                </value>
                <value>
                    <fullName>ESTATE</fullName>
                </value>
                <value>
                    <fullName>HATCHBACK</fullName>
                </value>
                <value>
                    <fullName>MPV</fullName>
                </value>
                <value>
                    <fullName>ROADSTER</fullName>
                </value>
                <value>
                    <fullName>SEDAN</fullName>
                </value>
                <value>
                    <fullName>SHOOTING BRAKE</fullName>
                </value>
                <value>
                    <fullName>SPORTCOUPE</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Native__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mercedes-Benz</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>Smart</fullName>
                </value>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Audi</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
                <value>
                    <fullName>Lexus</fullName>
                </value>
                <value>
                    <fullName>Abarth</fullName>
                </value>
                <value>
                    <fullName>Alfa Romeo</fullName>
                </value>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>AMC Jeep</fullName>
                </value>
                <value>
                    <fullName>Apal</fullName>
                </value>
                <value>
                    <fullName>Arutega</fullName>
                </value>
                <value>
                    <fullName>Aston Martin</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Autobianchi</fullName>
                </value>
                <value>
                    <fullName>Avanti</fullName>
                </value>
                <value>
                    <fullName>Bandenpura</fullName>
                </value>
                <value>
                    <fullName>Bentley</fullName>
                </value>
                <value>
                    <fullName>Bertone</fullName>
                </value>
                <value>
                    <fullName>Birkin</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BMW Alpina</fullName>
                </value>
                <value>
                    <fullName>Brabus</fullName>
                </value>
                <value>
                    <fullName>Bugatti</fullName>
                </value>
                <value>
                    <fullName>Buick</fullName>
                </value>
                <value>
                    <fullName>Burstner</fullName>
                </value>
                <value>
                    <fullName>Cadillac</fullName>
                </value>
                <value>
                    <fullName>Canada Honda</fullName>
                </value>
                <value>
                    <fullName>Carb Deeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_code__c</fullName>
        <label>Brand Code (SWT)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name_Native__c</fullName>
        <label>Current Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Past Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Cycle_Cluster__c</fullName>
        <label>LCC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LCC1</fullName>
                </value>
                <value>
                    <fullName>LCC2</fullName>
                </value>
                <value>
                    <fullName>LCC3</fullName>
                </value>
                <value>
                    <fullName>LCC4</fullName>
                </value>
                <value>
                    <fullName>LCC5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;),&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;),&apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;),&apos;JP&apos;,
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;),&apos;TH&apos;,
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;),&apos;KR&apos;,&apos;NA&apos;)))))</defaultValue>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Portal_Code__c</fullName>
        <label>Portal Model Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_Pack__c</fullName>
        <label>Mod Pack</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Code__c</fullName>
        <externalId>true</externalId>
        <label>Model Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Hierarchy_Code__c</fullName>
        <label>Model Hierarchy Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Hierarchy_Desc__c</fullName>
        <label>Model Hierarchy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Past Class and body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Native__c</fullName>
        <label>Current Class and body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_ShortName__c</fullName>
        <label>Short Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A160</fullName>
                </value>
                <value>
                    <fullName>A180</fullName>
                </value>
                <value>
                    <fullName>A 180 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 200 Hatchback</fullName>
                </value>
                <value>
                    <fullName>A 260 Hatchback</fullName>
                </value>
                <value>
                    <fullName>B200 Dynamic</fullName>
                </value>
                <value>
                    <fullName>B200</fullName>
                </value>
                <value>
                    <fullName>B200 BlueEFFICIENCY</fullName>
                </value>
                <value>
                    <fullName>B200 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury</fullName>
                </value>
                <value>
                    <fullName>B200 Luxury night special edition</fullName>
                </value>
                <value>
                    <fullName>C 200 Entry Elegance</fullName>
                </value>
                <value>
                    <fullName>C 280 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C230 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 CGI Elegance</fullName>
                </value>
                <value>
                    <fullName>C280 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Elegance</fullName>
                </value>
                <value>
                    <fullName>C200K Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200K Sport (not current series)</fullName>
                </value>
                <value>
                    <fullName>C260 Avantgarde</fullName>
                </value>
                <value>
                    <fullName>C200 Elegance</fullName>
                </value>
                <value>
                    <fullName>C240E Elegance (not current series)</fullName>
                </value>
                <value>
                    <fullName>C240A Avantgarde (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230 Elegance</fullName>
                </value>
                <value>
                    <fullName>C280</fullName>
                </value>
                <value>
                    <fullName>C200K</fullName>
                </value>
                <value>
                    <fullName>C240 (not current series)</fullName>
                </value>
                <value>
                    <fullName>C230</fullName>
                </value>
                <value>
                    <fullName>C260 CGI Avantgarde (CKD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series_Description__c</fullName>
        <label>Series Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>CL-Class</fullName>
                </value>
                <value>
                    <fullName>CLK-Class</fullName>
                </value>
                <value>
                    <fullName>CLS-Class</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GL-Class</fullName>
                </value>
                <value>
                    <fullName>GLA-Class</fullName>
                </value>
                <value>
                    <fullName>GLC-Class</fullName>
                </value>
                <value>
                    <fullName>GLE-Class</fullName>
                </value>
                <value>
                    <fullName>GLK-Class</fullName>
                </value>
                <value>
                    <fullName>GLS-Class</fullName>
                </value>
                <value>
                    <fullName>M-Class</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL-Class</fullName>
                </value>
                <value>
                    <fullName>SLC-Class</fullName>
                </value>
                <value>
                    <fullName>SLK-Class</fullName>
                </value>
                <value>
                    <fullName>SLR-Class</fullName>
                </value>
                <value>
                    <fullName>SLS-Class</fullName>
                </value>
                <value>
                    <fullName>VANEO</fullName>
                </value>
                <value>
                    <fullName>V-Class</fullName>
                </value>
                <value>
                    <fullName>VIANO</fullName>
                </value>
                <value>
                    <fullName>VITO</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>smart fortwo</fullName>
                </value>
                <value>
                    <fullName>smart forfour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own Sellable</fullName>
                </value>
                <value>
                    <fullName>Own Non Sellable</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steering__c</fullName>
        <label>Steering</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <label>Trim</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Group__c</fullName>
        <label>Vehicle Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>NGCC</fullName>
                </value>
                <value>
                    <fullName>Dream Car</fullName>
                </value>
                <value>
                    <fullName>VAN</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>CV</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_SubGroup__c</fullName>
        <label>Segment 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NGCC</fullName>
                </value>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>C-Class</fullName>
                </value>
                <value>
                    <fullName>Compact</fullName>
                </value>
                <value>
                    <fullName>CLA</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>E-Class</fullName>
                </value>
                <value>
                    <fullName>G-Class</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>GLE</fullName>
                </value>
                <value>
                    <fullName>GLK</fullName>
                </value>
                <value>
                    <fullName>Maybach</fullName>
                </value>
                <value>
                    <fullName>Mercedes-AMG GT</fullName>
                </value>
                <value>
                    <fullName>R-Class</fullName>
                </value>
                <value>
                    <fullName>S-Class</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>SLK</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>SLS</fullName>
                </value>
                <value>
                    <fullName>smart forfour</fullName>
                </value>
                <value>
                    <fullName>smart fortwo</fullName>
                </value>
                <value>
                    <fullName>smart roadster</fullName>
                </value>
                <value>
                    <fullName>VANEO</fullName>
                </value>
                <value>
                    <fullName>V-Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_SubSubGroup__c</fullName>
        <label>Segment 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Car Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Series__c</columns>
        <columns>Model__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Xbenzall</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Series__c</columns>
        <columns>Range__c</columns>
        <columns>Model_Code__c</columns>
        <columns>Material_Portal_Code__c</columns>
        <columns>Class_Name_Native__c</columns>
        <columns>Model_Native__c</columns>
        <columns>Series_Description__c</columns>
        <columns>Model__c</columns>
        <columns>Model_ShortName__c</columns>
        <columns>Brand_code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Vehicle_Group__c</columns>
        <columns>Vehicle_SubGroup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand_Native__c</field>
            <operation>equals</operation>
            <value>Mercedes-Benz,メルセデス・ベンツ</value>
        </filters>
        <label>Benzすべて</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Car Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Model</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>